--- a/TTCSDL_NHOM7.csproj
+++ b/TTCSDL_NHOM7.csproj
@@ -8,4 +8,9 @@
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Folder Include="DAOs\" />
+    <Folder Include="UserControls\" />
+  </ItemGroup>
+
 </Project>
